media removed to solve alignment issue

--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -92,9 +92,3 @@ h2 {
     color: #88898B;
     font-weight: 300;
 }
-
-@media screen and (min-width: 768px) {
-    .nav {
-        flex-direction: column;
-    }
-}
